[gd_scene load_steps=7 format=2]

[ext_resource path="res://Astro_Test_enemy.png" type="Texture" id=1]
[ext_resource path="res://Land_Enemy.gd" type="Script" id=2]
[ext_resource path="res://Weapon_Land.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 68.0074

[sub_resource type="CircleShape2D" id=3]
radius = 37.0135

[node name="Land_Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 20
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="In_Range" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="In_Range"]
shape = SubResource( 2 )

[node name="Min_Distance" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Min_Distance"]
shape = SubResource( 3 )

[node name="Weapon_Land" parent="." instance=ExtResource( 3 )]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 16

[connection signal="body_entered" from="In_Range" to="." method="_on_In_Range_body_entered"]
[connection signal="body_exited" from="In_Range" to="." method="_on_In_Range_body_exited"]
[connection signal="body_entered" from="Min_Distance" to="." method="_on_Min_Distance_body_entered"]
[connection signal="body_exited" from="Min_Distance" to="." method="_on_Min_Distance_body_exited"]
